# RPIQT_Dash

./: CMakeLists.txt  README.md
include/: middlebar.h  serialInfo.h  serialdatatransmit.h
qml_main/: BottomBarInfo.qml  Main.qml  MiddleBarInfo.qml  RPMInfo.qml  RadialShape.qml  SpeedInfo.qml  TopBarInfo.qml
src/: main.cpp  middlebar.cpp  serialInfo.cpp  serialdatatransmit.cpp
